tests/paczka2/big_fuzzy/99428864.err
Error in line 5: q5w S104 20,8
Error in line 18: LpuPZAf4Lld S158 0,7
Error in line 17: S104 S419 40,4
Error in line 16: V7VI4G S158 66,6
Error in line 33: V7VI4G S332 5,1
Error in line 36: tEui41a9 S104 98,3
Error in line 39: S104 S104 74,7
Error in line 56: V7VI4G S158 99,6
Error in line 63: V7VI4G S104 1,2
Error in line 65: yzmkDLGeFV S332 96,3
Error in line 60: tEui41a9 S419 119,1
Error in line 77: V7VI4G S332 -5,6
Error in line 72: V7VI4G S332 87,6
Error in line 82: LpuPZAf4Lld S419 23,0
Error in line 102: V7VI4G S158 120,6
Error in line 95: S104 S419 14,5
Error in line 112: IUeiSXR S158 6,9
Error in line 121: IUeiSXR S332 39,5
Error in line 116: yzmkDLGeFV S419 13,9
Error in line 124: V7VI4G S158 63,3
Error in line 123: S104 S332 19,9
Error in line 137: V7VI4G S419 //9,9
Error in line 136: S104 S158 55,4
Error in line 133: V7VI4G S419 82,1
Error in line 151: V7VI4G S332 36,2
Error in line 145: S104 S419 5,5
Error in line 155: S104 S332 14,2
Error in line 163: S104 S158 -1,1
Error in line 167: IUeiSXR S158 42,7
Error in line 165: V7VI4G S419 95,8
Error in line 173: V7VI4G S158 65,9
Error in line 195: IUeiSXR S332 18,9
Error in line 202: S104 S158 74,5
Error in line 209: tEui41a9 S332 64,7
Error in line 210: tEui41a9 S419 39,1
Error in line 205: S104 S104 29,9
Error in line 225: LpuPZAf4Lld S104 52,96
Error in line 218: LpuPZAf4Lld S332 13,2
Error in line 231: LpuPZAf4Lld½S158½92,4
Error in line 226: LpuPZAf4Lld S104 239,9
Error in line 233: tEui41a9 S104 0,4
Error in line 224: q5w S332 56,5
